packages/components/anchor/style/index.less
@import '../../style/mixins/reset.less';
@import '../../style/mixins/ellipsis.less';

.@{anchor-prefix} {
  position: relative;
  padding: 4px 0 4px @anchor-ink-ball-width;

  &-wrapper {
    .reset-component-new();
    .reset-font-size();
    .reset-color();

    margin-left: -4px;
    padding-left: 4px;
    overflow: auto;
  }

  &-ink {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;

    &::before {
      position: relative;
      display: block;
      width: 1px;
      height: 100%;
      margin: 0 auto;
      background-color: var(--ix-border-color);
      content: ' ';
    }

    &-ball {
      position: absolute;
      display: none;
      width: @anchor-ink-ball-width;
      height: @anchor-ink-ball-height;
      border-radius: @anchor-ink-ball-width;
      background-color: @anchor-color-active;
      transition: top var(--ix-transition-duration-fast) var(--ix-ease-in-out);

      &-visible {
        display: inline-block;
      }
    }
  }

  &-fixed &-ink &-ink-ball {
    display: none;
  }

  & > &-ink + &-link {
    margin-top: 0;
  }
  &-link:last-child {
    margin-bottom: 0;
  }

  &-link {
    margin: 8px 0 8px 16px;

    &-title {
      .ellipsis();

      position: relative;
      display: block;
      text-decoration: none;
      transition: color var(--ix-transition-duration-fast);

      &:hover,
      &-active {
        color: @anchor-color-active;
      }
    }
  }
}

